--- a/index.html
+++ b/index.html
@@ -5,16 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100&display=swap" rel="stylesheet">
     <title>Assignment-A1</title>
-    <link rel="stylesheet" href="styles/style.ccss">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <header>
-         <h3 class="subtitle">Bangladesh 2.0</h3>
-         <h1 class="title">Idea , innovation ,
-            vision and challenges in New Bangladesh.</h1>
-            <button>Explore New Bangladesh</button>
+        <!-- <div class="head-part">
+            <h3 class="title">Bangladesh 2.0</h3>
+            <span class="sign-logo">sign in</span>
+        </div> -->
+        <div class="banner-container">
+
+        <div class="banner-content">
+            <h3 class="banner-subtitle">Bangladesh 2.0</h3>
+            <h1 class="banner-title">Idea , innovation ,vision and challenges in New Bangladesh.</h1>
+               <button class="btn-primary">Explore New Bangladesh</button>  
+        </div>
+        <div class="hero-img">
+            <img src="assets/hero.png" alt="">
+        </div>
+      </div>
     </header>
     <main>
 
