--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Assignment-A1</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
-<body>
+<body class="body-margin">
     <header>
         <!-- <div class="head-part">
             <h3 class="title">Bangladesh 2.0</h3>
@@ -28,7 +28,32 @@
       </div>
     </header>
     <main>
-
+        <section>
+            
+            <h1 class="section-title">The Vision of Future</h1>
+            <p class="section-description">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+            <!-- .card*3>img+h2.card-title+p.card-description+btn -->
+            <div class="cards">
+                <div class="card-1">
+                    <img src="assets/card-icon.png" alt="">
+                    <h3 class="card-title">Digital Transformation</h3>
+                    <p class="card-description">Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
+                    <button class="btn-1">learn more</button>
+                </div>
+                <div class="card-2">
+                    <img src="assets/card-icon.png" alt="">
+                    <h3 class="card-title">Green Energy</h3>
+                    <p class="card-description">Investments in solar and wind energy to ensure a sustainable and eco-friendly future.</p>
+                    <button class="btn-2">learn more</button>
+                </div>
+                <div class="card-3">
+                    <img class="img-color" src="assets/card-icon.png" alt="">
+                    <h3 class="card-title">Modern Infrastructure</h3>
+                    <p class="card-description">Building state-of-the-art infrastructure to support economic growth and global competitiveness.</p>
+                    <button class="btn-3">learn more</button>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
