added a section box image and beside the text content

--- a/index.html
+++ b/index.html
@@ -54,6 +54,39 @@
                 </div>
             </div>
         </section>
+              
+        <section>
+            
+            <h1 class="section-title-2">Recent News</h1>
+            <p class="section-description-2">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+
+            <!-- box-1 -->
+          <div class="satellite-container">
+            <div class="earth-image">
+                    <img src="assets/satelite.png" alt="">
+            </div>
+            <div class="sub-content">
+                <h1 class="al-jazeera-title">Bangladesh Launches New Satellite</h1>
+                <img src="assets/al-jazeera.png" alt="">
+                <p class="date-time">Date:10/01/2025 &nbsp; &nbsp; time: 11:25 AM</p>
+                <p class="al-jazeera-description">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,with a certain degree of justification, be able to speak of humankind as civilized</p>
+                <button class="btn-primary1">Read More</button>
+            </div>
+        </div>
+        <!-- box-2 -->
+          <div class="satellite-containers">
+            <div class="earth-image">
+                    <img src="assets/satelite.png" alt="">
+            </div>
+            <div class="sub-content">
+                <h1 class="al-jazeera-title">Bangladesh Launches New Satellite</h1>
+                <img src="assets/al-jazeera.png" alt="">
+                <p class="date-time">Date:10/01/2025 &nbsp; &nbsp; time: 11:25 AM</p>
+                <p class="al-jazeera-description">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,with a certain degree of justification, be able to speak of humankind as civilized</p>
+                <button class="btn-primary1">Read More</button>
+            </div>
+        </div>
+        </section>
     </main>
     <footer>
 
