--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </header>
     <main>
         <section>
-
+           
             <h1 class="section-title">The Vision of Future</h1>
             <p class="section-description">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing
                 cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in
@@ -121,20 +121,21 @@
                      <div class="custom-amount">
                         <input type="text"
                         placeholder="Other amount of Tk">
+                        <button class=" donate-button">Done Now</button>
                      </div>
                     </div>
-                    <button class="btn-primary1 donate-button">Done Now</button>
+                   
                 </div>
             </div>
             </div>
             </section>
             <section>
-                <div>
+                <div class="subscribe-container">
                     <h1 class="subscribe-title">Subscribe Newsletter</h1>
                     <p class="sub-description">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth.</p>
-                    <input type="email" name="" id="" placeholder="Enter your email here"><button>Subscribe</button>
+                    <input type="email" name="" id="" placeholder="Enter your email here"><button class="sub-button">Subscribe</button>
 
-                    <span>We promise not to spam you!</span>
+                    <span class="text">We promise not to spam you!</span>
                 </div>
             </section>
     </main>
